<?xml version="1.0"?>
<package format="2">
  <name>aicon_mobile_robot</name>
  <version>0.0.0</version>
  <description>The aicon_mobile_robot package</description>
  <maintainer email="pshsdu75@gmail.com">daeun</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>nav_msgs</depend> -->
</package>
